parsergens_proc_macro/tests/snapshots/multi_entry_points__lalr-2.snap
---
source: parsergens_proc_macro/tests/multi_entry_points.rs
expression: result
---
Ok(
    Binary(
        Mul,
        Number(
            45,
        ),
        Neg(
            Number(
                2,
            ),
        ),
    ),
)
