parsergens_proc_macro/tests/snapshots/multi_entry_points__lalr-3.snap
---
source: parsergens_proc_macro/tests/multi_entry_points.rs
expression: result
---
Ok(
    ProcCall(
        "foo",
        [
            Neg(
                Number(
                    2,
                ),
            ),
            Binary(
                Mul,
                Number(
                    45,
                ),
                Neg(
                    Number(
                        2,
                    ),
                ),
            ),
        ],
    ),
)
